@@ -34,5 +34,5 @@ License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.14.0), Rcpp (>= 0.10.2)
 LinkingTo: Rcpp
-Suggests: inline, RUnit
+Suggests: RUnit
 URL: http://arma.sourceforge.net/, http://dirk.eddelbuettel.com/code/rcpp.armadillo.html, http://romainfrancois.blog.free.fr/index.php?category/R-package/RcppArmadillo
