@@ -1,12 +1,13 @@
 
-library(inline)
+library(RcppArmadillo)
 
-g <- cxxfunction(signature(vs="numeric"), plugin="RcppArmadillo", body='
-     arma::colvec v = Rcpp::as<arma::colvec>(vs);
+cppFunction(code='
+Rcpp::List g(arma::colvec v) {
      arma::mat op = v * v.t();
      double ip = arma::as_scalar(v.t() * v);
      return Rcpp::List::create(Rcpp::Named("outer")=op,
                                Rcpp::Named("inner")=ip);
-')
+}
+', depends="RcppArmadillo")
 
 g(7:11)
