@@ -3,6 +3,7 @@
 ## varSimulation.r: Simulation of first-order vector autoregression data
 ##
 ## Copyright (C)  2011  Lance Bachmeier and Dirk Eddelbuettel
+## Copyright (C)  2013  Dirk Eddelbuettel
 ##
 ## This file is part of RcppArmadillo.
 ##
@@ -20,18 +21,21 @@
 ## along with RcppArmadillo.  If not, see <http://www.gnu.org/licenses/>.
 
 
+## load Rcpp to be able to use cppFunction() below
+suppressMessages(library(Rcpp))
+
+
 ## parameter and error terms used throughout
 a <- matrix(c(0.5,0.1,0.1,0.5),nrow=2)
 e <- matrix(rnorm(10000),ncol=2)
 
-
 ## Let's start with the R version
 rSim <- function(coeff, errors) {
-  simdata <- matrix(0, nrow(errors), ncol(errors))
-  for (row in 2:nrow(errors)) {
-    simdata[row,] = coeff %*% simdata[(row-1),] + errors[row,]
-  }
-  return(simdata)
+    simdata <- matrix(0, nrow(errors), ncol(errors))
+    for (row in 2:nrow(errors)) {
+        simdata[row,] = coeff %*% simdata[(row-1),] + errors[row,]
+    }
+    return(simdata)
 }
 
 rData <- rSim(a, e)                     # generated by R
@@ -46,23 +50,21 @@ compRData <- compRsim(a,e)              # generated by R 'compiled'
 stopifnot(all.equal(rData, compRData))  # checking results
 
 
-## Now load 'inline' to compile C++ code on the fly
-suppressMessages(require(inline))
+## C++ variant: code passed as a text variable ...
 code <- '
-  arma::mat coeff = Rcpp::as<arma::mat>(a);
-  arma::mat errors = Rcpp::as<arma::mat>(e);
-  int m = errors.n_rows; int n = errors.n_cols;
-  arma::mat simdata(m,n);
-  simdata.row(0) = arma::zeros<arma::mat>(1,n);
-  for (int row=1; row<m; row++) {
-    simdata.row(row) = simdata.row(row-1)*trans(coeff)+errors.row(row);
-  }
-  return Rcpp::wrap(simdata);
+arma::mat rcppSim(arma::mat coeff, arma::mat errors) {
+    int m = errors.n_rows;
+    int n = errors.n_cols;
+    arma::mat simdata(m,n);
+    simdata.row(0) = arma::zeros<arma::mat>(1,n);
+    for (int row=1; row<m; row++) {
+        simdata.row(row) = simdata.row(row-1)*trans(coeff)+errors.row(row);
+    }
+    return simdata;
+}
 '
-
-## create the compiled function
-rcppSim <- cxxfunction(signature(a="numeric",e="numeric"),
-                       code,plugin="RcppArmadillo")
+## ... which is compiled/linked/loaded here to create the compiled function
+cppFunction(code=code, depends="RcppArmadillo")
 
 rcppData <- rcppSim(a,e)                # generated by C++ code
 
