@@ -1,24 +1,16 @@
 pkg <- "RcppArmadillo"
 
-if( ! require( "inline", character.only = TRUE, quietly = TRUE ) ){
-    stop( "The inline package is required to run RcppArmadillo unit tests" )
-}
-
-if( compareVersion( packageDescription( "inline" )[["Version"]], "0.3.5" ) < 0 ){
-    stop( "RcppArmadillo unit tests need at least the version 0.3.5 of inline" )
-}
-
-if(require("RUnit", quietly = TRUE)) {
+if (require("RUnit", quietly = TRUE)) {
 
     is_local <- function(){
-    	if( exists( "argv", globalenv() ) && "--local" %in% argv ) return(TRUE)
-    	if( "--local" %in% commandArgs(TRUE) ) return(TRUE)
+    	if (exists( "argv", globalenv() ) && "--local" %in% argv) return(TRUE)
+    	if ("--local" %in% commandArgs(TRUE)) return(TRUE)
     	FALSE
     }
-    if( is_local() ) path <- getwd()
+    if (is_local()) path <- getwd()
 
     library(package=pkg, character.only = TRUE)
-    if(!(exists("path") && file.exists(path)))
+    if (!(exists("path") && file.exists(path)))
         path <- system.file("unitTests", package = pkg)
 
     ## --- Testing ---
@@ -27,8 +19,7 @@ if(require("RUnit", quietly = TRUE)) {
     testSuite <- defineTestSuite(name=paste(pkg, "unit testing"), dirs = path)
 
     if(interactive()) {
-        cat("Now have RUnit Test Suite 'testSuite' for package '", pkg,
-            "' :\n", sep='')
+        cat("Now have RUnit Test Suite 'testSuite' for package '", pkg, "' :\n", sep='')
         str(testSuite)
         cat('', "Consider doing",
             "\t  tests <- runTestSuite(testSuite)", "\nand later",
@@ -40,7 +31,7 @@ if(require("RUnit", quietly = TRUE)) {
         output <- NULL
 
         process_args <- function(argv){
-            if( !is.null(argv) && length(argv) > 0 ){
+            if (!is.null(argv) && length(argv) > 0 ){
                 rx <- "^--output=(.*)$"
                 g  <- grep( rx, argv, value = TRUE )
                 if( length(g) ){
@@ -50,23 +41,23 @@ if(require("RUnit", quietly = TRUE)) {
         }
 
         # R CMD check uses this
-        if( exists( "RcppArmadillo.unit.test.output.dir", globalenv() ) ){
-			output <- RcppArmadillo.unit.test.output.dir
-		} else {
+        if (exists("RcppArmadillo.unit.test.output.dir", globalenv())) {
+            output <- RcppArmadillo.unit.test.output.dir
+        } else {
 
-			# give a chance to the user to customize where he/she wants
-        	# the unit tests results to be stored with the --output= command
-        	# line argument
-        	if( exists( "argv",  globalenv() ) ){
-        	    ## littler
-        	    output <- process_args(argv)
-        	} else {
-        	    ## Rscript
-        	    output <- process_args(commandArgs(TRUE))
-        	}
+            ## give a chance to the user to customize where he/she wants
+            ## the unit tests results to be stored with the --output= command
+            ## line argument
+            if (exists( "argv",  globalenv())) {
+                ## littler
+                output <- process_args(argv)
+            } else {
+                ## Rscript
+                output <- process_args(commandArgs(TRUE))
+            }
         }
 
-        if( is.null(output) ) {         # if it did not work, use parent dir
+        if (is.null(output)) {          # if it did not work, use parent dir
             output <- ".."              # as BDR does not want /tmp to be used
         }
 
@@ -87,7 +78,7 @@ if(require("RUnit", quietly = TRUE)) {
         ##  stop() if there are any failures i.e. FALSE to unit test.
         ## This will cause R CMD check to return error and stop
         err <- getErrors(tests)
-        if( (err$nFail + err$nErr) > 0) {
+        if ((err$nFail + err$nErr) > 0) {
             stop( sprintf( "unit test problems: %d failures, %d errors", err$nFail, err$nErr) )
         } else{
             success <- err$nTestFunc - err$nFail - err$nErr - err$nDeactivated
@@ -95,7 +86,6 @@ if(require("RUnit", quietly = TRUE)) {
         }
     }
 } else {
-    cat("R package 'RUnit' cannot be loaded -- no unit tests run\n",
-        "for package", pkg,"\n")
+    cat("R package 'RUnit' cannot be loaded -- no unit tests run\n", "for package", pkg,"\n")
 }
 
